# infinite-canvas

./: .gitignore  DEPLOYMENT.md  QUICK_START.md  README.md  docker-compose.yml
backend/: .env.example  README.md  pyproject.toml
backend/app/: config.py  main.py
backend/app/models/: requests.py  responses.py
backend/app/routers/: auth.py  common.py  health.py  openrouter.py  payments.py  upload.py
backend/app/services/: file_storage.py  openrouter_client.py  wechat_pay.py
backend/app/services/account_store/: __init__.py  store.py  transform.py  types.py
backend/app/services/providers/: base.py  factory.py  openai_provider.py  openrouter_provider.py
backend/tests/: test_config_parsing.py  test_payments_webhook_contract.py  test_requests_and_errors.py
docs/: deployment.md  project-analysis.md  quick-start.md  数据传输全流程.md
frontend/: .eslintrc.cjs  index.html  package-lock.json  package.json  playwright.config.ts  tailwind.config.js  vite.config.ts  vitest.config.ts
frontend/playwright-report/: index.html
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/hooks/: useAIGeneration.ts  useAccount.ts  useAssetImport.ts  useAsyncNodeTask.ts  useFileUpload.ts  useFlowPersistence.ts  useOpenRouterModels.ts  useRechargePolling.ts  useViewportPersistence.ts
frontend/src/i18n/: config.ts
frontend/src/services/: api.ts  authBridge.ts
frontend/src/stores/: accountStore.ts  aiStore.ts  (+2 more)
scripts/: README.md  qa_verify.py
scripts/archive/: README.md  qa_verify_v1.py  qa_verify_v2.py  qa_verify_v3.py  qa_verify_v4.py
scripts/manual/: README.md
(+87 files in other folders)
